--- a/views/includes/dictionary.jade
+++ b/views/includes/dictionary.jade
@@ -62,13 +62,13 @@ section
     .note.panel.panel-info
       .panel-heading Note
       .panel-body
-        |The key, <em>index</em>, always refers to <strong>/</strong> and cannot be changed. The keys must follow the url path.
+        |The key, <em>index</em>, always refers to <strong>/</strong> and cannot be changed. The keys must follow the URL path.
         h3 Example
         .table-responsive
           table.table.table-hover
             thead
               tr
-                th Url Path
+                th URL Path
                 th Javascript
                 th JSON
             tbody
@@ -117,7 +117,7 @@ section
         .note.panel.panel-primary
           .panel-heading Note
           .panel-body
-            |gengo supports version numbers in urls. The following is the regex for version numbers:
+            |gengo supports version numbers in URLs. The following is the regex for version numbers:
             pre.language-javascript
               code.
                 /\d{1,2}(\.)\d{1,2}((\.)\d{1,2})?$/
@@ -431,7 +431,7 @@ section
           tr
             td universe
             td
-              |Used to access keys across all routes. This means that if the Url path is /about,
+              |Used to access keys across all routes. This means that if the URL path is /about,
               |then you may access anything from the universe key to be used in the about page.
             td
               pre.language-javascript
@@ -552,8 +552,8 @@ section
                       "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ",
                       "incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud ",
                       "exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. ",
-                      "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. "
-                      "Excepteur sint occaecat cupidatat non proident, ",
+                      "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum ",
+                      "dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, ",
                       "sunt in culpa qui officia deserunt mollit anim id est laborum."
                     ]
                   };
@@ -572,8 +572,8 @@ section
                       "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ",
                       "incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud ",
                       "exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. ",
-                      "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. "
-                      "Excepteur sint occaecat cupidatat non proident, ",
+                      "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum ",
+                      "dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, ",
                       "sunt in culpa qui officia deserunt mollit anim id est laborum."
                     ]
                   }
