--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,3 +20,4 @@ html
     script(type='text/javascript', src='/javascripts/scroll.min.js')
     script(type='text/javascript', src='/prism/prism.min.js')
     script(type='text/javascript', src='/prism/components/prism-bash.min.js')
+    script(type='text/javascript', src='/javascripts/tracking.min.js')
