Fixed github banner. Added more details to Installation and Configuration.

--- a/views/includes/api.jade
+++ b/views/includes/api.jade
@@ -8,7 +8,6 @@ section
     h2 Input
     p
     |Input accepts a String and an Object. The String accepts a phrase and the Object accepts a phrase, locale, and/or count.
-    |See table below.
     hr
     .table-responsive
       table.table.table-hover
@@ -97,7 +96,7 @@ section
     hr
     h2 Arg
     p
-    | There are different types of data that arg can accept and will interpret based on the data. See table below.
+    | There are different types of data that arg can accept and will interpret based on the data.
     hr
     .table-responsive
       table.table.table-hover
