--- a/views/includes/credit.jade
+++ b/views/includes/credit.jade
@@ -14,7 +14,7 @@ section
 
     p
     |gengo.js was also made possible by Moment.js and Numeral.js.
-    |It makes sense to incorporate these libraries in a middleware
+    |It made sense to incorporate these libraries in a middleware
     |that translates. I'm sure one of these days it would be put to good use
     |so it's there when you need it.
 
