--- a/views/includes/dictionary.jade
+++ b/views/includes/dictionary.jade
@@ -124,6 +124,11 @@ section
         h3 Example
         .table-responsive
           table.table.table-hover
+            thead
+              tr
+                th URL Path
+                th Javascript
+                th JSON
             tbody
               tr
                 td /v0.2/api/greeting
@@ -346,7 +351,7 @@ section
     h2 Keywords
     p
     |Keywords are automatically searched by gengo.
-    |If no keyword is provided gengo will see if key in your dictionary is the desired phrase. See table below for usage.
+    |If no keyword is provided gengo will see if key in your dictionary is the desired phrase.
     br
     br
     .table-responsive
@@ -469,7 +474,7 @@ section
     p
     |gengo.js has a built-in and customized markdown parser that enables you to insert basic formatting into your phrase.
     |This will allow you to focus on other things rather than worry about the tedious process of
-    |inserting html into your phrases. See table below.
+    |inserting html into your phrases.
     br
     br
     .table-responsive
@@ -534,7 +539,7 @@ section
     h2 Multi-line Dictionaries
     p
     |There are cases when writing long phrases into your dictionary makes it hard to keep the format short and sweet.
-    |To overcome this problem, gengo allows you to use arrays in your dictionary. See table below.
+    |To overcome this problem, gengo allows you to use arrays in your dictionary.
     br
     br
     .table-responsive
