--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,6 +13,10 @@ html
     link(rel='stylesheet', href='/animate.css/animate.min.css')
     link(rel='stylesheet', href='/prism/themes/prism.min.css')
     link(rel='stylesheet', href='/stylesheets/style.min.css')
+    link(rel='stylesheet' href='/github-fork-ribbon-css/gh-fork-ribbon.min.css')
+    <!--[if lt IE 9]>
+    <link rel='stylesheet' href='/github-fork-ribbon-css/gh-fork-ribbon.ie.min.css'>
+    <![endif]-->
   body
     block content
     script(type='text/javascript', src='/jquery/dist/jquery.min.js')
