--- a/views/includes/install.jade
+++ b/views/includes/install.jade
@@ -33,3 +33,20 @@ section
           });
 
         app.use(gengo.init);
+    h2 Usage
+    h3 Example
+    pre.language-javascript
+      code.
+        __('Hello')
+    .note.panel.panel-info
+      .panel-heading Note
+      .panel-body gengo.js can be used in a script tag and in most template engines.
+        br
+        br
+        pre.language-markup
+          code.
+            &ltscript&gt
+              $(document).ready(function(){
+                alert("\!{__('Hello', 'ja')}"); // --> こんにちは
+               });
+            &ltscript&gt
