--- a/views/index.jade
+++ b/views/index.jade
@@ -4,13 +4,13 @@ block content
   header
    .github-fork-ribbon-wrapper.left
       .github-fork-ribbon
-        a(href='https://www.github.com/iwatakeshi/gengojs' target='_blank') Fork me on GitHub 
+        a(href='https://www.github.com/iwatakeshi/gengojs' target='_blank') Fork me on GitHub
           .fa.fa-github
   //main section
   section#top
     //toggle
     #menu.animated.bounceInDown
-      a#toggle(href='#')
+      a#toggle(href='##')
         i.fa.fa-bars
       ul
         li
@@ -26,7 +26,7 @@ block content
         li
           a(href='#credits') Credits
     #globe.animated.bounceInDown
-      a#toggle(href='#')
+      a#toggle(href='##')
         i.fa.fa-globe
       ul
         li
