--- a/views/includes/install.jade
+++ b/views/includes/install.jade
@@ -49,4 +49,4 @@ section
               $(document).ready(function(){
                 alert("\!{__('Hello', 'ja')}"); // --> こんにちは
                });
-            &ltscript&gt
+            &lt/script&gt
