--- a/views/includes/install.jade
+++ b/views/includes/install.jade
@@ -37,7 +37,7 @@ section
     h3 Example
     pre.language-javascript
       code.
-        __('Hello');
+        __('Hello'); // --> こんにちは
     .note.panel.panel-info
       .panel-heading Note
       .panel-body gengo.js can be used in a script tag and in most template engines.
