--- a/views/includes/install.jade
+++ b/views/includes/install.jade
@@ -34,6 +34,7 @@ section
 
         app.use(gengo.init);
     h2 Usage
+    p gengo.js uses <code>__</code> but can be changed. See Configuration.
     h3 Example
     pre.language-javascript
       code.
