--- a/views/includes/dictionary.jade
+++ b/views/includes/dictionary.jade
@@ -451,8 +451,8 @@ section
                     },
                     "gengo":{
                       "navbar": {
-                        "Home": "ホーム",
-                        "About":"アバウト"
+                        "home": "ホーム",
+                        "about":"アバウト"
                       }
                     }
                   };
@@ -465,8 +465,8 @@ section
                     },
                     "gengo": {
                       "navbar": {
-                        "Home": "ホーム",
-                        "About":"アバウト"
+                        "home": "ホーム",
+                        "about":"アバウト"
                       }
                     }
                   }
