--- a/views/includes/dictionary.jade
+++ b/views/includes/dictionary.jade
@@ -142,7 +142,7 @@ section
                         "v0.2": {
                           "api": {
                             "greeting": {
-                              "Hello":"こんにちは"
+                              "hello":"こんにちは"
                             }
                           }
                         }
@@ -157,7 +157,7 @@ section
                           "v0.2": {
                             "api": {
                               "greeting": {
-                                "Hello":"こんにちは"
+                                "hello":"こんにちは"
                               }
                             }
                           }
