--- a/views/includes/config.jade
+++ b/views/includes/config.jade
@@ -182,11 +182,12 @@ section
               pre.language-javascript
                 code.
                   gengo.config({
-                    plural: "p",
-                    default: "d",
-                    translated: "t",
+                    keywords:{
+                      plural: "p",
+                      default: "d",
+                      translated: "t",
                     universe: "u"
-                  });
+                  }});
           tr
             td String
             td cookie
