Fixed example in API

--- a/views/includes/api.jade
+++ b/views/includes/api.jade
@@ -81,7 +81,7 @@ section
                   //phrase with subkey
                   __("[Hello World].subkey");
                   //dotted key
-                  __("navbar.home");
+                  __("[navbar.home]");
                   //dotted key with subkey
                   __("[navbar.home].subkey");
           tr
