--- a/views/includes/dictionary.jade
+++ b/views/includes/dictionary.jade
@@ -1,8 +1,7 @@
 section
   .content
     h1#dictionary Dictionary
-    p
-    |Setting up your dictionary is simple. We will look at the basic setup then the usages with notations and keywords.
+    p Setting up your dictionary is simple. We will look at the basic setup then the usages with notations and keywords.
     h2 Basics
     .table-responsive
       table.table.table-hover
@@ -349,8 +348,7 @@ section
                         }
                       }
     h2 Keywords
-    p
-    |Keywords are automatically searched by gengo.
+    p Keywords are automatically searched by gengo.
     |If no keyword is provided gengo will see if key in your dictionary is the desired phrase.
     br
     br
@@ -471,8 +469,7 @@ section
                     }
                   }
     h2 Markdown
-    p
-    |gengo.js has a built-in and customized markdown parser that enables you to insert basic formatting into your phrase.
+    p gengo.js has a built-in and customized markdown parser that enables you to insert basic formatting into your phrase.
     |This will allow you to focus on other things rather than worry about the tedious process of
     |inserting html into your phrases.
     br
