--- a/views/index.jade
+++ b/views/index.jade
@@ -37,7 +37,7 @@ block content
           a(href='https://www.github.com/iwatakeshi/gengojs-site/' target="_blank") Fork
     #heading.animated.fadeInUp
       #logo= title
-      #tagline the best i18n middleware for Express
+      #tagline #{__('main.motto')}
     #version.animated.bounce
       #npm v0.3
 
