--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,7 +11,6 @@ html {
 		height: 100%;
 }
 body {
-		font: 17px/1.5 'Noto Sans', sans-serif;
 		background: white;
 		margin: 0;
 		color: #33333d;
@@ -40,8 +39,9 @@ section:not(#top) {
 		width: 100%;
 }
 p {
+
+		font-size: 15px;
 		font-weight: 300;
-		font-size: 20px;
 		font-family: 'Noto Sans', sans-serif;
 }
 h1 {
@@ -181,9 +181,13 @@ section:nth-child(2n) {
 }
 @media screen and (max-width: 500px) {
 		body {
-				font-size: 13px;
+				font-size: 14px;
 		}
 }
 .panel {
 		margin-top: 5%;
+}
+
+.panel-headng{
+	font-size: 17px;
 }
