--- a/views/includes/install.jade
+++ b/views/includes/install.jade
@@ -1,9 +1,7 @@
 section
   .content
     h1#installation Installation
-    p
-    |gengo.js has been tested in Windows and Linux and works best with Express 4 and Sails.js.
-    |Once installed, gengo.js also includes two sample Sails.js apps that you can try.
+    p #{__('install.instruct')}
     hr
     pre.language-bash
       code.
@@ -18,8 +16,7 @@ section
          npm start #or 'sails lift' if Sails.js is installed
     hr
     h2 Initialize
-    p
-    |You can simply initialize gengo.js by requiring and configuring it. See Configuration.
+    p #{__("install.initialize")}
     hr
     pre.language-javascript
       code.
@@ -34,14 +31,14 @@ section
 
         app.use(gengo.init);
     h2 Usage
-    p gengo.js uses <code>__</code> but can be changed. See Configuration.
+    p !{__('install.usage')}
     h3 Example
     pre.language-javascript
       code.
         __('Hello'); // --> こんにちは
     .note.panel.panel-info
       .panel-heading Note
-      .panel-body gengo.js can be used in a script tag and in most template engines.
+      .panel-body #{__('install.note')}
         br
         br
         pre.language-markup
