Fixing translation in progress

--- a/views/includes/dictionary.jade
+++ b/views/includes/dictionary.jade
@@ -463,9 +463,7 @@ section
                     }
                   }
     h2 Markdown
-    p gengo.js has a built-in and customized markdown parser that enables you to insert basic formatting into your phrase.
-    |This will allow you to focus on other things rather than worry about the tedious process of
-    |inserting html into your phrases.
+    p #{__('dict.markdown.info')}
     br
     br
     .table-responsive
@@ -519,7 +517,7 @@ section
     .note.panel.panel-info
       .panel-heading Note
       .panel-body
-        | Links supports the following targets:
+        | #{__('dict.markdown.note')}
         ul
           li _blank
           li _self
@@ -528,9 +526,7 @@ section
           li
             em framename
     h2 Multi-line Dictionaries
-    p
-    |There are cases when writing long phrases into your dictionary makes it hard to keep the format short and sweet.
-    |To overcome this problem, gengo allows you to use arrays in your dictionary.
+    p #{__('dict.multiline.info')}
     br
     br
     .table-responsive
