Finished translation fixes

--- a/views/includes/api.jade
+++ b/views/includes/api.jade
@@ -82,7 +82,7 @@ section
                   __("[navbar.home].subkey");
           tr
             td Dot
-            td #{__('api.notation.table.two')}
+            td #{__('api.notation.table.three')}
             td
               pre.language-javascript
                 code.
