--- a/views/includes/api.jade
+++ b/views/includes/api.jade
@@ -44,11 +44,9 @@ section
     .note.panel.panel-info
       .panel-heading Note
       .panel-body
-        p
-        |#{__('api.input.table.note')}
+        p #{__('api.input.table.note')}
     h3 Notation
-    p
-    |#{__('api.notation.info')}
+    p #{__('api.notation.info')}
     hr
     .table-responsive
       table.table.table-hover
@@ -90,8 +88,7 @@ section
                   __("navbar.home.subkey");
     hr
     h2 Arg
-    p
-    | #{__('api.arg.note')}
+    p #{__('api.arg.info')}
     hr
     .table-responsive
       table.table.table-hover
