--- a/views/includes/dictionary.jade
+++ b/views/includes/dictionary.jade
@@ -516,8 +516,7 @@ section
     br
     .note.panel.panel-info
       .panel-heading Note
-      .panel-body
-        | #{__('dict.markdown.note')}
+      .panel-body #{__('dict.markdown.note')}
         ul
           li _blank
           li _self
