--- a/views/index.jade
+++ b/views/index.jade
@@ -30,9 +30,9 @@ block content
         i.fa.fa-globe
       ul
         li
-          a(href='#') English
+          a(href='').en-us English
         li
-          a(href='#') Japanese
+          a(href='').ja Japanese
         li
           a(href='https://www.github.com/iwatakeshi/gengojs-site/' target="_blank") Fork
     #heading.animated.fadeInUp
