--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,3 +25,11 @@ html
     script(type='text/javascript', src='/prism/prism.min.js')
     script(type='text/javascript', src='/prism/components/prism-bash.min.js')
     script(type='text/javascript', src='/javascripts/tracking.min.js')
+    script(type='text/javascript', src='/jquery-cookie/jquery.cookie.js')
+    script(type='text/javascript', src='/gengojs-cookie-locale/gcl.min.js')
+    script.
+        $(document).ready(function(){
+            $('.en-us, .ja').click(function(){
+                gcl().setLocale(this);
+            })
+        })
