test new commit

--- a/views/index.jade
+++ b/views/index.jade
@@ -30,7 +30,7 @@ block content
         i.fa.fa-globe
       ul
         li
-          a(href='').en-us English
+          a(href='').en English
         li
           a(href='').ja Japanese
         li
