test new commit

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,7 +29,7 @@ html
     script(type='text/javascript', src='/gengojs-cookie-locale/gcl.min.js')
     script.
         $(document).ready(function(){
-            $('.en-us, .ja').click(function(){
+            $('.en .ja').click(function(){
                 gcl().setLocale(this);
             })
         })
