--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,11 @@
   <%- _.unescape(partial('./partials/intro')) %>
   </div>
 </section>
+<section>
+  <div class="content">
+  <%- _.unescape(partial('./partials/api')) %>
+  </div>
+</section>
 <footer>
   <div class="row">
     <div class="col-lg-12">
