--- a/views/partials/banner.ejs
+++ b/views/partials/banner.ejs
@@ -22,6 +22,6 @@
     <div id="tagline"> Under Construction! </div>
   </div>
   <div id="version" class="animated bounce">
-    <div id="npm">1.0.0-alpha.3</div>
+    <div id="npm"></div>
   </div>
 </section>
