--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
       <div class="content">
         <ul class="list-unstyled">
           <li class="pull-right"><a href="#top">Back to top</a></li>
-          <li>
+          <li> Copyright© 2020
             This is an open source project licensed under MIT by
             <a href="https://twitter.com/iwatakeshi" target="_blank">@iwatakeshi</a>
           </li>
